<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    style="@style/backGround"
    tools:context=".Activity.Learner.RegisterMainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

<!--            <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--                android:id="@+id/actionBack"-->
<!--                android:layout_width="40dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_marginStart="5dp"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:clickable="true"-->
<!--                android:importantForAccessibility="no"-->
<!--                android:src="@drawable/baseline_arrow_back_ios_new_24"-->
<!--                app:backgroundTint="@color/app_theme_light"-->
<!--                app:fabCustomSize="40dp"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:tint="@color/app_theme"-->
<!--                tools:ignore="ImageContrastCheck" />-->
            <ImageButton
                android:id="@+id/actionBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:scaleType="centerCrop"
                android:importantForAccessibility="no"
                android:src="@drawable/baseline_arrow_back_ios_new_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/blue"
                android:background="@null"
                tools:ignore="ImageContrastCheck" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="120dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:hint="@string/enter_email"
                    android:textColorHint="#0277BD"
                    app:boxBackgroundColor="@color/app_theme_light"
                    app:boxBackgroundMode="filled"
                    app:boxStrokeColor="@color/blue"
                    app:counterOverflowTextColor="@color/blue"
                    app:hintTextColor="@color/blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginBottom="8dp"
                        android:drawableStart="@drawable/baseline_email_24"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/blue"
                        android:ems="10"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        tools:ignore="TextContrastCheck" />

                    <requestFocus />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:hint="@string/enter_password"
                    android:textColorHint="@color/blue"
                    app:boxBackgroundColor="@color/app_theme_light"
                    app:boxBackgroundMode="filled"
                    app:boxStrokeColor="@color/blue"
                    app:counterOverflowTextColor="@color/blue"
                    app:errorIconDrawable="@null"
                    app:hintTextColor="@color/app_theme"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.45"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextText1"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/blue"
                    app:placeholderTextColor="#b7bac5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginBottom="8dp"
                        android:drawableStart="@drawable/baseline_lock_24"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/blue"
                        android:ems="10"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:hint="@string/enter_re_password"
                    android:textColorHint="@color/blue"
                    app:boxBackgroundColor="@color/app_theme_light"
                    app:boxBackgroundMode="filled"
                    app:boxStrokeColor="@color/blue"
                    app:counterOverflowTextColor="@color/blue"
                    app:errorIconDrawable="@null"
                    app:hintTextColor="@color/blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.45"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextText2"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/blue"
                    app:placeholderTextColor="#b7bac5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPassword2"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginBottom="8dp"
                        android:drawableStart="@drawable/baseline_lock_24"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/blue"
                        android:ems="10"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignup"
                    style="@style/button"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/signup_button"
                    android:textColor="@color/white"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextText3"
                    tools:ignore="VisualLintButtonSize" />

                <TextView
                    android:id="@+id/textView9"
                    style="@style/textColorBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/register_title"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0"
                    android:text="@string/register_login_link"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnSignup" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>